# vision_projects

./: README.md
projects/: README.md  environment.yml
projects/src/: paranoma.py
projects/visionagent/: README.md  environment.yaml  environment.yml  panorama.spec  paranoma.spec  pyproject.toml  special_effect.spec
projects/visionagent/src/: paranoma.py  special_effect.py
