[tool.poetry]
name = "vision"
version = "0.1.0"
description = "computer vision agent task"
authors = ["juneon <junun24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
pyqt6 = "^6.7.1"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
